plugins {
	id 'java'
	id 'war'
	id 'org.springframework.boot' version '3.2.5'
	id 'io.spring.dependency-management' version '1.1.4'
	id 'org.hibernate.orm' version '6.4.4.Final'
	id 'org.graalvm.buildtools.native' version '0.9.28'
}

group = 'io.github.tiagoadmstz'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '21'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	developmentOnly 'org.springframework.boot:spring-boot-docker-compose'
	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
	//security
	//implementation "org.springframework.boot:spring-boot-starter-security"
	//implementation 'com.nimbusds:nimbus-jose-jwt:9.37.3'
	//web
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.security:spring-security-crypto'
	//database
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.flywaydb:flyway-core'
	implementation 'org.postgresql:postgresql:42.7.3'
	//reports
	implementation 'com.lowagie:itext:2.1.7'
	implementation 'net.sf.jasperreports:jasperreports:5.6.1'
	implementation 'net.sf.jasperreports:jasperreports-fonts:5.6.1'
	implementation 'org.olap4j:olap4j:1.2.0'
	implementation 'com.toedter:jcalendar:1.4'
	implementation 'org.jfree:jfreechart:1.5.0'
	//utils
	implementation 'org.apache.commons:commons-lang3:3.14.0'
	//documentation
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'
	//test
	runtimeOnly 'com.h2database:h2'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

tasks.named('test') {
	useJUnitPlatform()
}
